完成部门，岗位和登录日志
